# OS

./: README.md
1_lab/doc/: report.docx
1_lab/src/: res.txt
2_lab/doc/: dsad.txt  report.docx
2_lab/src/: Makefile  child_2.cpp
3_lab/doc/: report.docx
3_lab/src/: Makefile  main.cpp
4_lab/doc/: report.docx
4_lab/src/: CMakeLists.txt  child_1.cpp  child_2.cpp  main.cpp
5_lab/doc/: report.docx
5_lab/src/: Makefile  lib1.c  lib2.c  prog1.c  prog2.c
6-8_lab/doc/: report.docx
6-8_lab/src/: Makefile  control.cpp  counting.cpp
OS_lab1/: child_2.cpp  main.cpp
course_project/doc/: report.docx
course_project/src/: A.cpp  B.cpp  C.cpp  Makefile
lab1/: Makefile  child_1.cpp
lab2/: child_1.cpp  main.cpp
